tests/snapshots/assets__check_file@unit-chain-call.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/chain/call.typ
snapshot_kind: text
---
#{ a.b(1)(2).c.d(3) }

#{
  a
    .bbbbbbbbbbbbb()
    .c()
    .ddddddddddddddddddddddd
}

#{
  a
    .bbbbbbbbbbbbbb()[c][d]
    .eeeeeeeeee()
    .f()
}

#{
  a
    .bbbbbbbbbbbbbb()[c][d]
    .eeeeeeeeee()
    .f(123)[444][ccc]
}

#{
  let (title, _) = query(
    heading.where(level: 1),
  )
    .map(e => (
      e.body,
      e.location().page(),
    ))
    .rev()
    .find(((_, v)) => v <= page)
}

#(
  a
    .b()[c][d]
    .eeeeeeeeeeeeeee()
    .fffffffff()
)

#{
  (1,).rev().map(((n, c)) => f(n, c, 1))
}

#{
  padding
    .pairs()
    .map((k, x) => (k, x * 1.5))
    .to-dict()
}
#{
  let hlines_below_header = first-row-group-long-long
    .row_group-long-long-long-long
    .hlines-long-long-long-long
    .filter(h => (
      h.y == header_last_y + 1
    ))

  let hlines_below_header = first-row-group-long-long
    .row_group-long-long-long-long
    .hlines-long-long-long-long
    .filter((h, _) => (
      h.y == header_last_y + 1
    ))
}

#{
  aaaaaaaa(bbbbbbb, ccccccc)
    .ddddddddd()()
    .eeeeeeeee[]
    .ffffffffff


  let points = (
    from,
    to,
  )
    .zip(offsets)
    .map((
      (
        point,
        offset,
      ),
    ) => none)

  (
    (
      1,
      2,
    ),
    2,
    3,
  ).rev()

  import cetz.draw: *
}
