tests/snapshots/assets__check_file@unit-code-arg-flavor.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/arg-flavor.typ
snapshot_kind: text
---
#let my-f(
  arg1,
  arg2,
  args: none,
) = {
  (
    arg1
      + arg2
  )
}

#let my-f(
  arg1,
  arg2,
  args: none,
) = {
  (
    arg1
      + arg2
  )
}
