tests/snapshots/assets__check_file@unit-code-arg-flavor.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/arg-flavor.typ
---
#let my-f(arg1, arg2, args: none) = {
  arg1 + arg2
}

#let my-f(
  arg1,
  arg2,
  args: none,
) = { arg1 + arg2 }
