tests/snapshots/assets__check_file@unit-code-array-flavor.typ-0.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/array-flavor.typ
snapshot_kind: text
---
#{
  (
    111,
    222,
    333,
  )
}

#{
  (
    11,
    22,
    33,
  )
}
