tests/snapshots/assets__check_file@unit-code-array-flavor.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/array-flavor.typ
---
#{
  (
    111,
    222,
    333,
  )
}

#{ (11, 22, 33) }
