tests/snapshots/assets__check_file@unit-code-array.typ-80.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/array.typ
snapshot_kind: text
---
#{
  (1,)
  (1, 2, 3)
}
