tests/snapshots/assets__check_file@unit-code-binary-op-array.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/binary-op-array.typ
---
#{
  list += (
    raw(name) + if item.at(1) {
      " (reversed)"
    },
  )
}
